# Optocus

./: CMakeLists.txt  README.md  main.cpp
include/: Header.h
include/calculating/: Image.h  Lens.h  Object.h  OpticalDevice.h  OpticalSystem.h  Ray.h  Segment.h  TODO.txt
include/calculating/geometry/: Point.h  Ray.h  Segment.h
include/model/: Lens.h  RayTrace.h  System.h
lib/calculating/: CMakeLists.txt
lib/calculating/include/: Image.h  Lens.h  OpticalSystem.h  Ray.h  Segment.h
lib/calculating/src/: Lens.cpp  OpticalSystem.cpp  Ray.cpp  Segment.cpp
resources/: devices.json  formulas.json  phenomena.json
src/: Window.h  main.cpp
src/calculating/: Image.cpp  Lens.cpp  Object.cpp  OpticalSystem.cpp  Point.cpp  Ray.cpp  Segment.cpp
src/calculating/geometry/: Point.cpp  Ray.cpp  Segment.cpp
src/graphics/: GraphicsPanel.cpp  GraphicsPanel.h  OpticalController.cpp  OpticalController.h
src/gui_logic/: Pages.ui  pages.cpp  pages.h
src/pages/: CalculatorPageWidget.cpp  CalculatorPageWidget.h  DevicesPageWidget.cpp  DevicesPageWidget.h  FormulasPageWidget.cpp  FormulasPageWidget.h  HomePageWidget.cpp  HomePageWidget.h  ManualPageWidget.cpp  ManualPageWidget.h  ModelingPageWidget.cpp  ModelingPageWidget.h  PhenomPageWidget.cpp  PhenomPageWidget.h
src/pages/gui_logic/: Pages.ui  pages.cpp
src/style/: OptStyle.cpp  OptStyle.h
test/include/: rectangle.h
test/src/: rectangle.cpp
